frontend/src/components/layout/Layout.module.css
:root {
    --header-padding: 0.2em;  
    
    --darker-highlight-colour: rgb(from var(--highlight-colour) r g b / 0.6);  
}

body {
    font-family: 'Inter', sans-serif;
    transition: background-color 0.5s ease-in-out;
}

#main-container {
    color: black;
    height: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
}

#main-content {
    padding: 0.75em;
    margin: auto 0;
    height: 100%;
    min-height: fit-content;
}

@media screen and (min-width: 768px) {
    #main-content {
        padding: 0;
        height: 80%;
        min-height: unset;

        display: flex;
        align-items: center;
        flex-direction: column;
        justify-content: center;
    }
    
}

